--- a/index.html
+++ b/index.html
@@ -6,33 +6,40 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js"></script>
   </head>
-  <body class="container vertical-center">
-    <h1>Welcome to the quiz!</h1>
+  <body>
     <img class="right" src="img/python_img.jpg" alt="image of the python symbol">
     <img class="left" src="img/javascript_img.png" alt="image of the javascript symbol">
-    <form>
-      <label for="name">What is your name?</label>
-      <input type="text" name="name" id="Name">
-      <br>
-      <label for="favNum">What is your favorite number?</label>
-      <input type="number" name="favNum" id="Num">
-      <br>
-      <p>Pick your favorite project of the ones shown</p>
-      <label for="AI">Coding an neural network from scratch</label>
-      <input type="radio" name="favProject" id="AI" value="AI">
-      <br>
-      <label for="Web">Coding a websites logic</label>
-      <input type="radio" name="favProject" id="Web" value="Web">
-      <br>
-      <label for="Stle">Coding a websites style</label>
-      <input type="radio" name="favProject" id="Style" value="Style">
-      <br>
-      <label for="animal">favorite animal?</label>
-      <input type="text" id="animal">
-      <br>
-      <input type="submit" id="submit">
-    </form>
+    <div class="vertical-center">
+      <form>
+        <h1>Welcome to the quiz!</h1>
+        <label for="name">What is your name?</label>
+        <input type="text" name="name" id="Name">
+        <br>
+        <label for="favNum">What is your favorite number?</label>
+        <input type="number" name="favNum" id="Num">
+        <br>
+        <p>Pick your favorite project of the ones shown</p>
+        <label for="AI">Coding an neural network from scratch</label>
+        <input type="radio" name="favProject" id="AI" value="AI">
+        <br>
+        <label for="Web">Coding a websites logic</label>
+        <input type="radio" name="favProject" id="Web" value="Web">
+        <br>
+        <label for="Stle">Coding a websites style</label>
+        <input type="radio" name="favProject" id="Style" value="Style">
+        <br>
+        <label for="animal">favorite animal?</label>
+        <input type="text" id="animal">
+        <br>
+        <label for="language">Favorite programing language?</label>
+        <input type="text" id="language">
+        <br>
+        <input type="submit" id="submit">
+        <input type="button" id="clear" value="CLEAR">
+      </form>
+    </div>
     <h3 id="outputH"></h3>
     <p id="outputP"></p>
+    <a href="#" id="link"></a>
   </body>
 </html>
